@@ -255,6 +255,10 @@ None.
     /etc/shorewall/interfaces, multicast traffic will now be sent to
     the zone along with limited broadcasts.
 
+5)  A flaw in the parsing logic for the zones file allowed most zone
+    types containing the character string 'ip' to be accepted as a
+    synonym for 'ipv4' (or ipv6 if compiling an IPv6 configuration).
+
 ----------------------------------------------------------------------------
                  N E W   F E A T U R E S   I N   4 . 4
 ----------------------------------------------------------------------------
