@@ -29,6 +29,8 @@ Changes in Shorewall 4.4.1
 
 14) Fix rule generated by MULTICAST=Yes
 
+15) Fix silly hole in zones file parsing.
+
 Changes in Shorewall 4.4.0
 
 1)  Fix 'compile ... -' so that it no longer requires '-v-1'
